--- a/scss/partials/_main.scss
+++ b/scss/partials/_main.scss
@@ -1,6 +1,6 @@
 
 .fondo {
-    background-image: url(../img/8fefe76a14c7163afd417d57e3624271.jpg); 
+    background-image: url(/img/8fefe76a14c7163afd417d57e3624271.jpg); 
 
     .hero {
         background-image: url(/img/imagen-index.jpg);
