--- a/scss/scss.scss
+++ b/scss/scss.scss
@@ -1,6 +1,6 @@
-@import "./partials/variables";
-@import "./partials/reset";
-@import "./partials/header";
-@import "./partials/main";
-@import "./partials/footer";
-@import "./partials/media";
+@import "./variables";
+@import "./reset";
+@import "./header";
+@import "./main";
+@import "./footer";
+@import "./media";
