--- a/scss/_main.scss
+++ b/scss/_main.scss
@@ -1,9 +1,9 @@
 
 .fondo {
-    background-image: url(/img/8fefe76a14c7163afd417d57e3624271.jpg); 
+    background-image: url(/img/8fefe76a14c7163afd417d57e3624271.jpg);
 
     .hero {
-        background-image: url(/img/imagen-index.jpg);
+        background-image: url(../img/imagen-index.jpg);
         height: 100vh;
 
         .animacionTitulo {
